--- a/sitio-web/board-page/index-board.html
+++ b/sitio-web/board-page/index-board.html
@@ -11,31 +11,31 @@
 
 <body class="page__container">
     <header class="header__container">
-        <img class="main-logo" src="/sitio-web/home-page/assets/img/logo.svg" alt="Html & CSS logo"></img>
+        <img class="main-logo" src="../home-page/assets/img/logo.svg" alt="Html & CSS logo"></img>
         <label class="toggle__input" for="toggle__input">&#9776;</label>
         <input type="checkbox" class="checkbox__button" id="toggle__input">
         <nav class="nav__container">
             <ul class="menu-bar__list">
-                <li><a class="menu-bar__item" href="/sitio-web/home-page/assets/index.html">HOME</a></li>
-                <li><a class="menu-bar__item" href="/sitio-web/board-page/index-board.html">BOARD</a></li>
-                <li><a class="menu-bar__item" href="/sitio-web/contact-page/index-contact.html">CONTACTO</a></li>
+                <li><a class="menu-bar__item" href="../home-page/assets/index.html">HOME</a></li>
+                <li><a class="menu-bar__item" href="./index-board.html">BOARD</a></li>
+                <li><a class="menu-bar__item" href="../contact-page/index-contact.html">CONTACTO</a></li>
             </ul>
             <div class="logos__container--aligner">
                 <div class="logos__container--social-media">
                     <a href="https://www.facebook.com/">
-                    <img class="social-media__logo logo__facebook" src="/sitio-web/home-page/assets/img/fb-logo.png"
+                    <img class="social-media__logo logo__facebook" src="../home-page/assets/img/fb-logo.png"
                         alt="Facebook logo">
                     </a>
                     <a href="https://www.twitter.com/">
-                    <img class="social-media__logo logo__twitter" href="https://www.twitter.com/" src="/sitio-web/home-page/assets/img/twit-logo.png"
+                    <img class="social-media__logo logo__twitter" href="https://www.twitter.com/" src="../home-page/assets/img/twit-logo.png"
                         alt="Twitter logo">
                         </a>
                         <a href="https://www.youtube.com/">
-                    <img class="social-media__logo logo__youtube" href="https://www.youtube.com/" src="/sitio-web/home-page/assets/img/yt-logo.png"
+                    <img class="social-media__logo logo__youtube" href="https://www.youtube.com/" src="../home-page/assets/img/yt-logo.png"
                         alt="Youtube logo">
                     </a>
                     <a href="https://www.instagram.com/">
-                    <img class="social-media__logo logo__instagram" src="/sitio-web/home-page/assets/img/inst-logo.png"
+                    <img class="social-media__logo logo__instagram" src="../home-page/assets/img/inst-logo.png"
                         alt="Instagram logo">
                         </a>
                 </div>
