--- a/sitio-web/home-page/assets/index.html
+++ b/sitio-web/home-page/assets/index.html
@@ -18,9 +18,9 @@
         <input type="checkbox" class="checkbox__button" id="toggle__input">
         <nav class="nav__container">
             <ul class="menu-bar__list">
-                <li><a class="menu-bar__item" href="/sitio-web/home-page/assets/index.html">HOME</a></li>
-                <li><a class="menu-bar__item" href="/sitio-web/board-page/index-board.html">BOARD</a></li>
-                <li><a class="menu-bar__item" href="/sitio-web/contact-page/index-contact.html">CONTACTO</a></li>
+                <li><a class="menu-bar__item" href="./index.html">HOME</a></li>
+                <li><a class="menu-bar__item" href="../../board-page/index-board.html">BOARD</a></li>
+                <li><a class="menu-bar__item" href="../../contact-page/index-contact.html">CONTACTO</a></li>
             </ul>
             <div class="logos__container--aligner">
                 <div class="logos__container--social-media">
