--- a/sitio-web/home-page/assets/index.html
+++ b/sitio-web/home-page/assets/index.html
@@ -54,42 +54,44 @@
             <h1 class="title-video">Vamos a crear una web responsive y animada.</h1>
         </div>
     </div>
-    <!-- FLIP-CARDS -->
+
+
+    <!-- FLIP-CARDS-SECTION -->
     <section class="section__cards--container">
         <h1 class="cards__container--title">Lugares del mundo</h1>
         <!-- CARDS -->
         <div class="cards__container">
             <!-- MOUNTAIN CARD -->
-            <div class="card__inner">
-                <div class="card__faces card__front card__front--mountain">
-                    <h3 class="card__front--title">MONTAÑA</h3>
+            <div class="card__mountain">
+                <div class="card-front__mountain">
+                    <p class="front__title">MOUNTAIN</p>
                 </div>
-                <div class="card__faces  card__back">
-                    <h3 class="card__back--title">MONTAÑA</h3>
-                    <p class="card__back--description">Encuentra tu próximo destino en los pirineos Catalanes y
+                <div class="card-back__mountain">
+                    <p class="back__title">MOUNTAIN</p>
+                    <p class="back__description">Encuentra tu próximo destino en los pirineos Catalanes y
                         Aragoneses.</p>
                 </div>
             </div>
             <!-- LAKE CARD -->
-            <div class="card__inner">
-                <div class="card__faces card__front card__front--lake">
-                    <h3 class="card__front--title">MONTAÑA</h3>
+            <div class="card__lake">
+                <div class="card-front__lake">
+                    <p class="front__title">LAKE</p>
                 </div>
-                <div class="card__faces  card__back">
-                    <h3 class="card__back--title">LAGOS</h3>
-                    <p class="card__back--description">Descubre los lagos glaciares del Parque Nacional de los Picos de
-                        Europa</p>
+                <div class="card-back__lake">
+                    <p class="back__title">LAKE</p>
+                    <p class="back__description">Descubre los lagos glaciares del Parque Nacional de los Picos de
+                        Europa.</p>
                 </div>
             </div>
             <!-- OCEAN CARD -->
-            <div class="card__inner">
-                <div class="card__faces card__front card__front--ocean">
-                    <h3 class="card__front--title">OCEANOS</h3>
+            <div class="card__ocean">
+                <div class="card-front__ocean">
+                    <p class="front__title">OCEAN</p>
                 </div>
-                <div class="card__faces  card__back">
-                    <h3 class="card__back--title">OCEANOS</h3>
-                    <p class="card__back--description">Explora el Océano Atlántico y algunas de
-                        las playas más bonitas que existen.</p>
+                <div class="card-back__ocean">
+                    <p class="back__title">OCEAN</p>
+                    <p class="back__description">Explora el Océano Atlántico y algunas de
+                        las playas más bonitas que existen</p>
                 </div>
             </div>
         </div>
